# ESERCITAZIONE-PCS-2026

./: esercitazione1.txt
esercitazione1/: CMakeLists.txt  medie.cpp  printargs.cpp
esercitazione2/: CMakeLists.txt  es2.cpp  print_xy.cpp
esercitazione3/: CMakeLists.txt  main.cpp  razionali.hpp
esercitazione4/: CMakeLists.txt  misura_tempo.cpp  sort.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  measure_sorts.cpp  sorting.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_selectionsort.cpp
esercitazione8/: CMakeLists.txt  grafi.hpp  main.cpp
